2024-08-11  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
	git tag -a 5.2.8-alpha02 -m 'ncatted/ncrename: fl_fmt msg, NC_STRING; ncks --chk_map fix area_b dgn';git push --tags

	* ncatted and ncrename now explain (then exit) when user specifies output file type

	* Improve WARNING when ncatted and ncrename will not modify NC_STRING history attributes

2024-08-09  Charlie Zender  <zender@uci.edu>

	* Revert nco_hst_att_cat() NC_STRING feature for ncatted/ncrename (fail at nc_enddef()/nc_close() stage)

	* Print correct label and location for new grid diagnostics for area_b in nco_map_chk()

	* NCO 5.2.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha01: Kia';git push
	git tag -a 5.2.8-alpha01 -m 'Functionally identical to 5.2.7 and supports NC_STRING history attribute';git push --tags

	* Modify nco_hst_att_cat() to write/append an NC_STRING history attribute

2024-08-08  Charlie Zender  <zender@uci.edu>

	* nco_c++ nco_att.hh address two CEWI warnings

2024-07-24  Charlie Zender  <zender@uci.edu>

	* Rudimentary version of CAAS algorithm primitives works with CAAS arrays

2024-07-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7: Kealakekua';git push
	git tag -a 5.2.7 -m 'all: qnt lossy_compresion->quantization, dpr family; ncclimo: mth_flg clm md ERROR; ncks fix flg_dst_mpt/add_fll, chk_map area_a/b dmt lcn; ncremap: fix sgs_frc typo';git push --tags

2024-07-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha04: Fake Orangina';git push
	git tag -a 5.2.7-alpha04 -m 'ncclimo: mth_flg clm md ERROR; ncks chk_map area_a/b dmt lcn; ncremap: fix sgs_frc typo';git push --tags

	* nco.texi: Clarify method and rationale for specifying --sgs_frc=/path/to/file/sgs_frc
